# autofoundry

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: README.md  guides.md
mechatrainer/: .gitignore  README.md  main.py  pytest.ini  requirements.txt
mechatrainer/providers/: __init__.py  runpod.py  vastai.py
mechatrainer/tests/: README.md  __init__.py  test_runpod_integration.py
reference/mechatrainer/: main.py
reference/mechatrainer/providers/: __init__.py  primeintellect.py  runpod.py
reference/mechatrainer/tests/: test_primeintellect.py  test_primeintellect_integration.py  test_runpod.py  test_vastai.py  test_vastai_integration.py
scripts/: build_and_run_autoresearch_on_primeintellect.sh  run_autoresearch.sh  run_autoresearch_full.sh  run_autoresearch_on_lambdalabs.sh  run_autoresearch_on_runpod.sh  run_autoresearch_on_vastai.sh  setup_autoresearch.sh
src/autofoundry/: __init__.py  __main__.py  cli.py  config.py  executor.py  gpu_filter.py  image_builder.py  models.py  planner.py  provisioner.py  reporter.py  state.py  theme.py
src/autofoundry/providers/: __init__.py  base.py  lambdalabs.py  primeintellect.py  runpod.py  vastai.py
tests/: MANUAL_TESTS.md  test_cli.py  test_config.py  test_gpu_filter.py  test_planner.py  test_provisioner.py  test_state.py
tests/test_providers/: test_lambdalabs_volumes.py  test_runpod_volumes.py
